Better flags for Sherpa

--- a/SHERPA-MC/2.2.15/PATCHED/AddOns/Python/Makefile.am
+++ b/SHERPA-MC/2.2.15/PATCHED/AddOns/Python/Makefile.am
@@ -21,7 +21,7 @@ Sherpa_wrap.cxx: $(noinst_HEADERS) libMEProcess.la
 python_LTLIBRARIES = _Sherpa.la
 
 nodist__Sherpa_la_SOURCES = Sherpa_wrap.cxx
-_Sherpa_la_CPPFLAGS= @PYTHON_CPPFLAGS@  -I$(top_srcdir) -I$(top_srcdir)/../
+_Sherpa_la_CPPFLAGS= @PYTHON_CPPFLAGS@ -DSWIG_NOINCLUDE -I$(top_srcdir) -I$(top_srcdir)/../
 _Sherpa_la_LDFLAGS = -module
 _Sherpa_la_LIBADD  = -L@SHERPABUILDDIR@/Main -L.  -lSherpaMain -lMEProcess\
 		$(HZTOOLLIBS) $(PGSLIBS) @ATOOLSLIBS@
