Rivet for cascade  and rapgap

--- a/rapgap/3.4.0/PATCHED/CMakeLists.txt
+++ b/rapgap/3.4.0/PATCHED/CMakeLists.txt
@@ -129,8 +129,9 @@ if (RAPGAP_RIVET)
     find_package(Rivet COMPONENTS HEPMC2 )
   endif()
   message(STATUS "RAPGAP: RIVET_FOUND=${RIVET_FOUND} RIVET_VERSION=${RIVET_VERSION} RIVET_LIBRARIES=${RIVET_LIBRARIES} RIVET_INCLUDE_DIRS=${RIVET_INCLUDE_DIRS} RIVET_DATA_PATH=${RIVET_DATA_PATH} RIVET_ANALYSIS_PATH=${RIVET_ANALYSIS_PATH} Rivet_HEPMC2_FOUND=${Rivet_HEPMC2_FOUND}  Rivet_HEPMC3_FOUND=${Rivet_HEPMC3_FOUND}")
-  if ("${RIVET_VERSION}" VERSION_GREATER "3")
+  if ("${RIVET_VERSION}" VERSION_GREATER_EQUAL "4")
     add_definitions(-DRIVET4)
+    add_definitions(-DRIVET_ENABLE_HEPMC_3)
   endif()
 endif()
 
@@ -455,7 +456,7 @@ endif()
 if (RAPGAP_RIVET AND RIVET_FOUND)
   target_include_directories(rapgap PRIVATE  ${RIVET_INCLUDE_DIR}) 
   target_link_libraries(rapgap PRIVATE ${RIVET_LIBRARIES})
-    set_property(TARGET rapgap PROPERTY CXX_STANDARD 14)
+  set_property(TARGET rapgap PROPERTY CXX_STANDARD 17)
 endif()
 
 ## MANUAL  #############################################################
