--- a/fjcontrib/1.100/ORIG/RecursiveTools/Makefile
+++ b/fjcontrib/1.100/ORIG/RecursiveTools/Makefile
@@ -18,10 +18,21 @@ NAME=RecursiveTools
 SRCS=Recluster.cc RecursiveSymmetryCutBase.cc ModifiedMassDropTagger.cc SoftDrop.cc IteratedSoftDrop.cc RecursiveSoftDrop.cc BottomUpSoftDrop.cc
 EXAMPLES=example_mmdt example_mmdt_sub example_mmdt_ee example_recluster example_softdrop example_recursive_softdrop example_advanced_usage example_isd example_bottomup_softdrop
 INSTALLED_HEADERS=Recluster.hh RecursiveSymmetryCutBase.hh ModifiedMassDropTagger.hh SoftDrop.hh IteratedSoftDrop.hh RecursiveSoftDrop.hh BottomUpSoftDrop.hh
+# List here any dependencies on other contribs. Note that they 
+# must be listed (potentially with versioning constraints) also
+# in the FJCONTRIB.cfg file.
+DEPENDS_ON = 
 #------------------------------------------------------------------------
 
 CXXFLAGS+= $(shell $(FASTJETCONFIG) --cxxflags)
-LDFLAGS += -lm $(shell $(FASTJETCONFIG) --libs)
+LDFLAGS += $(shell $(FASTJETCONFIG) --libs)
+
+INCLUDE += -Iinclude/
+# loop over all entries in DEPENDS_ON and for each entry ENTRY
+# add -I../ENTRY to INCLUDE, -L../ENTRY to LDFLAGS and -lENTRY to LDFLAGS
+INCLUDE += $(foreach ENTRY,$(DEPENDS_ON),-I../$(ENTRY)/include)
+LDFLAGS += $(foreach ENTRY,$(DEPENDS_ON),-L../$(ENTRY) -l$(ENTRY))
+CXXFLAGS+= $(INCLUDE)
 
 OBJS  = $(SRCS:.cc=.o)
 EXAMPLES_SRCS  = $(EXAMPLES:=.cc)
@@ -77,33 +88,57 @@ distclean: clean
 install: all
 	$(install_DIR) $(PREFIX)/include/fastjet/contrib
 	for header in $(INSTALLED_HEADERS); do\
-	  $(install_HEADER) $$header $(PREFIX)/include/fastjet/contrib/;\
+	  $(install_HEADER) include/fastjet/contrib/$$header $(PREFIX)/include/fastjet/contrib/;\
 	done
 	$(install_DIR) $(PREFIX)/lib
 	$(install_LIB) lib$(NAME).a $(PREFIX)/lib
 
 depend:
-	makedepend -Y --   -- $(SRCS) $(EXAMPLES_SRCS)
+	makedepend -Y -- -Iinclude  -- $(SRCS) $(EXAMPLES_SRCS)
 # DO NOT DELETE
 
-Recluster.o: Recluster.hh
-RecursiveSymmetryCutBase.o: RecursiveSymmetryCutBase.hh Recluster.hh
-ModifiedMassDropTagger.o: ModifiedMassDropTagger.hh
-ModifiedMassDropTagger.o: RecursiveSymmetryCutBase.hh Recluster.hh
-SoftDrop.o: SoftDrop.hh RecursiveSymmetryCutBase.hh Recluster.hh
-IteratedSoftDrop.o: IteratedSoftDrop.hh
-RecursiveSoftDrop.o: RecursiveSoftDrop.hh Recluster.hh SoftDrop.hh
-RecursiveSoftDrop.o: RecursiveSymmetryCutBase.hh
-BottomUpSoftDrop.o: BottomUpSoftDrop.hh
-example_mmdt.o: ModifiedMassDropTagger.hh RecursiveSymmetryCutBase.hh
-example_mmdt.o: Recluster.hh
-example_mmdt_sub.o: ModifiedMassDropTagger.hh RecursiveSymmetryCutBase.hh
-example_mmdt_sub.o: Recluster.hh
-example_recluster.o: Recluster.hh
-example_softdrop.o: SoftDrop.hh RecursiveSymmetryCutBase.hh Recluster.hh
-example_recursive_softdrop.o: RecursiveSoftDrop.hh Recluster.hh SoftDrop.hh
-example_recursive_softdrop.o: RecursiveSymmetryCutBase.hh
-example_bottomup_softdrop.o: BottomUpSoftDrop.hh
-example_advanced_usage.o: SoftDrop.hh RecursiveSymmetryCutBase.hh
-example_advanced_usage.o: Recluster.hh
-example_isd.o: IteratedSoftDrop.hh
+Recluster.o: include/fastjet/contrib/Recluster.hh
+RecursiveSymmetryCutBase.o: include/fastjet/contrib/RecursiveSymmetryCutBase.hh
+RecursiveSymmetryCutBase.o: include/fastjet/contrib/Recluster.hh
+ModifiedMassDropTagger.o: include/fastjet/contrib/ModifiedMassDropTagger.hh
+ModifiedMassDropTagger.o: include/fastjet/contrib/RecursiveSymmetryCutBase.hh
+ModifiedMassDropTagger.o: include/fastjet/contrib/Recluster.hh
+SoftDrop.o: include/fastjet/contrib/SoftDrop.hh
+SoftDrop.o: include/fastjet/contrib/RecursiveSymmetryCutBase.hh
+SoftDrop.o: include/fastjet/contrib/Recluster.hh
+IteratedSoftDrop.o: include/fastjet/contrib/IteratedSoftDrop.hh
+IteratedSoftDrop.o: include/fastjet/contrib/RecursiveSoftDrop.hh
+IteratedSoftDrop.o: include/fastjet/contrib/Recluster.hh
+IteratedSoftDrop.o: include/fastjet/contrib/SoftDrop.hh
+IteratedSoftDrop.o: include/fastjet/contrib/RecursiveSymmetryCutBase.hh
+RecursiveSoftDrop.o: include/fastjet/contrib/RecursiveSoftDrop.hh
+RecursiveSoftDrop.o: include/fastjet/contrib/Recluster.hh
+RecursiveSoftDrop.o: include/fastjet/contrib/SoftDrop.hh
+RecursiveSoftDrop.o: include/fastjet/contrib/RecursiveSymmetryCutBase.hh
+BottomUpSoftDrop.o: include/fastjet/contrib/BottomUpSoftDrop.hh
+example_mmdt.o: include/fastjet/contrib/ModifiedMassDropTagger.hh
+example_mmdt.o: include/fastjet/contrib/RecursiveSymmetryCutBase.hh
+example_mmdt.o: include/fastjet/contrib/Recluster.hh
+example_mmdt_sub.o: include/fastjet/contrib/ModifiedMassDropTagger.hh
+example_mmdt_sub.o: include/fastjet/contrib/RecursiveSymmetryCutBase.hh
+example_mmdt_sub.o: include/fastjet/contrib/Recluster.hh
+example_mmdt_ee.o: include/fastjet/contrib/ModifiedMassDropTagger.hh
+example_mmdt_ee.o: include/fastjet/contrib/RecursiveSymmetryCutBase.hh
+example_mmdt_ee.o: include/fastjet/contrib/Recluster.hh
+example_recluster.o: include/fastjet/contrib/Recluster.hh
+example_softdrop.o: include/fastjet/contrib/SoftDrop.hh
+example_softdrop.o: include/fastjet/contrib/RecursiveSymmetryCutBase.hh
+example_softdrop.o: include/fastjet/contrib/Recluster.hh
+example_recursive_softdrop.o: include/fastjet/contrib/RecursiveSoftDrop.hh
+example_recursive_softdrop.o: include/fastjet/contrib/Recluster.hh
+example_recursive_softdrop.o: include/fastjet/contrib/SoftDrop.hh
+example_recursive_softdrop.o: include/fastjet/contrib/RecursiveSymmetryCutBase.hh
+example_advanced_usage.o: include/fastjet/contrib/SoftDrop.hh
+example_advanced_usage.o: include/fastjet/contrib/RecursiveSymmetryCutBase.hh
+example_advanced_usage.o: include/fastjet/contrib/Recluster.hh
+example_isd.o: include/fastjet/contrib/IteratedSoftDrop.hh
+example_isd.o: include/fastjet/contrib/RecursiveSoftDrop.hh
+example_isd.o: include/fastjet/contrib/Recluster.hh
+example_isd.o: include/fastjet/contrib/SoftDrop.hh
+example_isd.o: include/fastjet/contrib/RecursiveSymmetryCutBase.hh
+example_bottomup_softdrop.o: include/fastjet/contrib/BottomUpSoftDrop.hh
