--- a/fjcontrib/1.100/PATCHED/RecursiveTools/Makefile
+++ b/fjcontrib/1.100/PATCHED/RecursiveTools/Makefile
@@ -19,6 +19,10 @@ NAME=RecursiveTools
 SRCS=Recluster.cc RecursiveSymmetryCutBase.cc ModifiedMassDropTagger.cc SoftDrop.cc IteratedSoftDrop.cc RecursiveSoftDrop.cc BottomUpSoftDrop.cc
 EXAMPLES=example_mmdt example_mmdt_sub example_mmdt_ee example_recluster example_softdrop example_recursive_softdrop example_advanced_usage example_isd example_bottomup_softdrop
 INSTALLED_HEADERS=Recluster.hh RecursiveSymmetryCutBase.hh ModifiedMassDropTagger.hh SoftDrop.hh IteratedSoftDrop.hh RecursiveSoftDrop.hh BottomUpSoftDrop.hh
+# List here any dependencies on other contribs. Note that they 
+# must be listed (potentially with versioning constraints) also
+# in the FJCONTRIB.cfg file.
+DEPENDS_ON = 
 #------------------------------------------------------------------------
 
 CXXFLAGS+= $(shell $(FASTJETCONFIG) --cxxflags)
@@ -90,27 +94,51 @@ install: all
 	$(install_LIB) lib$(NAME).a $(DESTDIR)$(LIBDIR)
 	$(install_LIB) lib$(NAME).so $(DESTDIR)$(LIBDIR)
 depend:
-	makedepend -Y --   -- $(SRCS) $(EXAMPLES_SRCS)
+	makedepend -Y -- -Iinclude  -- $(SRCS) $(EXAMPLES_SRCS)
 # DO NOT DELETE
 
-Recluster.o: Recluster.hh
-RecursiveSymmetryCutBase.o: RecursiveSymmetryCutBase.hh Recluster.hh
-ModifiedMassDropTagger.o: ModifiedMassDropTagger.hh
-ModifiedMassDropTagger.o: RecursiveSymmetryCutBase.hh Recluster.hh
-SoftDrop.o: SoftDrop.hh RecursiveSymmetryCutBase.hh Recluster.hh
-IteratedSoftDrop.o: IteratedSoftDrop.hh
-RecursiveSoftDrop.o: RecursiveSoftDrop.hh Recluster.hh SoftDrop.hh
-RecursiveSoftDrop.o: RecursiveSymmetryCutBase.hh
-BottomUpSoftDrop.o: BottomUpSoftDrop.hh
-example_mmdt.o: ModifiedMassDropTagger.hh RecursiveSymmetryCutBase.hh
-example_mmdt.o: Recluster.hh
-example_mmdt_sub.o: ModifiedMassDropTagger.hh RecursiveSymmetryCutBase.hh
-example_mmdt_sub.o: Recluster.hh
-example_recluster.o: Recluster.hh
-example_softdrop.o: SoftDrop.hh RecursiveSymmetryCutBase.hh Recluster.hh
-example_recursive_softdrop.o: RecursiveSoftDrop.hh Recluster.hh SoftDrop.hh
-example_recursive_softdrop.o: RecursiveSymmetryCutBase.hh
-example_bottomup_softdrop.o: BottomUpSoftDrop.hh
-example_advanced_usage.o: SoftDrop.hh RecursiveSymmetryCutBase.hh
-example_advanced_usage.o: Recluster.hh
-example_isd.o: IteratedSoftDrop.hh
+Recluster.o: include/fastjet/contrib/Recluster.hh
+RecursiveSymmetryCutBase.o: include/fastjet/contrib/RecursiveSymmetryCutBase.hh
+RecursiveSymmetryCutBase.o: include/fastjet/contrib/Recluster.hh
+ModifiedMassDropTagger.o: include/fastjet/contrib/ModifiedMassDropTagger.hh
+ModifiedMassDropTagger.o: include/fastjet/contrib/RecursiveSymmetryCutBase.hh
+ModifiedMassDropTagger.o: include/fastjet/contrib/Recluster.hh
+SoftDrop.o: include/fastjet/contrib/SoftDrop.hh
+SoftDrop.o: include/fastjet/contrib/RecursiveSymmetryCutBase.hh
+SoftDrop.o: include/fastjet/contrib/Recluster.hh
+IteratedSoftDrop.o: include/fastjet/contrib/IteratedSoftDrop.hh
+IteratedSoftDrop.o: include/fastjet/contrib/RecursiveSoftDrop.hh
+IteratedSoftDrop.o: include/fastjet/contrib/Recluster.hh
+IteratedSoftDrop.o: include/fastjet/contrib/SoftDrop.hh
+IteratedSoftDrop.o: include/fastjet/contrib/RecursiveSymmetryCutBase.hh
+RecursiveSoftDrop.o: include/fastjet/contrib/RecursiveSoftDrop.hh
+RecursiveSoftDrop.o: include/fastjet/contrib/Recluster.hh
+RecursiveSoftDrop.o: include/fastjet/contrib/SoftDrop.hh
+RecursiveSoftDrop.o: include/fastjet/contrib/RecursiveSymmetryCutBase.hh
+BottomUpSoftDrop.o: include/fastjet/contrib/BottomUpSoftDrop.hh
+example_mmdt.o: include/fastjet/contrib/ModifiedMassDropTagger.hh
+example_mmdt.o: include/fastjet/contrib/RecursiveSymmetryCutBase.hh
+example_mmdt.o: include/fastjet/contrib/Recluster.hh
+example_mmdt_sub.o: include/fastjet/contrib/ModifiedMassDropTagger.hh
+example_mmdt_sub.o: include/fastjet/contrib/RecursiveSymmetryCutBase.hh
+example_mmdt_sub.o: include/fastjet/contrib/Recluster.hh
+example_mmdt_ee.o: include/fastjet/contrib/ModifiedMassDropTagger.hh
+example_mmdt_ee.o: include/fastjet/contrib/RecursiveSymmetryCutBase.hh
+example_mmdt_ee.o: include/fastjet/contrib/Recluster.hh
+example_recluster.o: include/fastjet/contrib/Recluster.hh
+example_softdrop.o: include/fastjet/contrib/SoftDrop.hh
+example_softdrop.o: include/fastjet/contrib/RecursiveSymmetryCutBase.hh
+example_softdrop.o: include/fastjet/contrib/Recluster.hh
+example_recursive_softdrop.o: include/fastjet/contrib/RecursiveSoftDrop.hh
+example_recursive_softdrop.o: include/fastjet/contrib/Recluster.hh
+example_recursive_softdrop.o: include/fastjet/contrib/SoftDrop.hh
+example_recursive_softdrop.o: include/fastjet/contrib/RecursiveSymmetryCutBase.hh
+example_advanced_usage.o: include/fastjet/contrib/SoftDrop.hh
+example_advanced_usage.o: include/fastjet/contrib/RecursiveSymmetryCutBase.hh
+example_advanced_usage.o: include/fastjet/contrib/Recluster.hh
+example_isd.o: include/fastjet/contrib/IteratedSoftDrop.hh
+example_isd.o: include/fastjet/contrib/RecursiveSoftDrop.hh
+example_isd.o: include/fastjet/contrib/Recluster.hh
+example_isd.o: include/fastjet/contrib/SoftDrop.hh
+example_isd.o: include/fastjet/contrib/RecursiveSymmetryCutBase.hh
+example_bottomup_softdrop.o: include/fastjet/contrib/BottomUpSoftDrop.hh
